docs/api/qiskit/2.0/qiskit.circuit.library.PhaseOracle.mdx
---
title: PhaseOracle (v2.0)
description: API reference for qiskit.circuit.library.PhaseOracle in qiskit v2.0
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.PhaseOracle
---

# PhaseOracle

<Class id="qiskit.circuit.library.PhaseOracle" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/library/phase_oracle.py#L22-L129" signature="qiskit.circuit.library.PhaseOracle(expression, var_order=None)" modifiers="class">
  Bases: [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")

  Phase Oracle.

  The Phase Oracle object constructs circuits for any arbitrary input logical expressions. A logical expression is composed of logical operators & (logical AND), | (logical OR), \~ (logical NOT), and ^ (logical XOR). as well as symbols for literals (variables). For example, ‘a & b’, and (v0 | \~v1) & (\~v2 & v3) are both valid string representation of boolean logical expressions.

  A phase oracle for a boolean function f(x) performs the following quantum operation:

$$
|x\rangle \mapsto (-1)^{f(x)}|x\rangle
$$

  For convenience, this oracle, in addition to parsing arbitrary logical expressions, also supports input strings in the [DIMACS CNF format](https://web.archive.org/web/20190325181937/https://www.satcompetition.org/2009/format-benchmarks2009.html), which is the standard format for specifying SATisfiability (SAT) problem instances in [Conjunctive Normal Form (CNF)](https://en.wikipedia.org/wiki/Conjunctive_normal_form), which is a conjunction of one or more clauses, where a clause is a disjunction of one or more literals. See `qiskit.circuit.library.phase_oracle.PhaseOracle.from_dimacs_file()`.

  From 16 variables on, possible performance issues should be expected when using the default synthesizer.

  **Parameters**

  *   **expression** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – A Python-like boolean expression.
  *   **var\_order** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*\[*[*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")*] | None*) – A list with the order in which variables will be created. (default: by appearance)

  ## Attributes

  ### ancillas

  <Attribute id="qiskit.circuit.library.PhaseOracle.ancillas">
    A list of `AncillaQubit`s in the order that they were added. You should not mutate this.
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.PhaseOracle.clbits">
    A list of `Clbit`s in the order that they were added. You should not mutate this.

    **Example**

    ```python
    from qiskit import QuantumRegister, ClassicalRegister, QuantumCircuit

    qr1 = QuantumRegister(2)
    qr2 = QuantumRegister(1)
    cr1 = ClassicalRegister(2)
    cr2 = ClassicalRegister(1)
    qc = QuantumCircuit(qr1, qr2, cr1, cr2)

    print("List the qubits in this circuit:", qc.qubits)
    print("List the classical bits in this circuit:", qc.clbits)
    ```

    ```text
    List the qubits in this circuit: [Qubit(QuantumRegister(2, 'q0'), 0),
    Qubit(QuantumRegister(2, 'q0'), 1), Qubit(QuantumRegister(1, 'q1'), 0)]
    List the classical bits in this circuit: [Clbit(ClassicalRegister(2, 'c0'), 0),
    Clbit(ClassicalRegister(2, 'c0'), 1), Clbit(ClassicalRegister(1, 'c1'), 0)]
    ```
  </Attribute>

  ### cregs

  <Attribute id="qiskit.circuit.library.PhaseOracle.cregs">
    A list of `Clbit`s in the order that they were added. You should not mutate this.
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.PhaseOracle.data">
    The circuit data (instructions and context).

    **Example**

    ```python
    from qiskit import QuantumCircuit

    qc = QuantumCircuit(2, 2)
    qc.measure([0], [1])
    print(qc.data)
    ```

    ```text
    [CircuitInstruction(operation=Instruction(name='measure', num_qubits=1,
    num_clbits=1, params=[]), qubits=(Qubit(QuantumRegister(2, 'q'), 0),),
    clbits=(Clbit(ClassicalRegister(2, 'c'), 1),))]
    ```

    **Returns**

    A list-like object containing the [`CircuitInstruction`](qiskit.circuit.CircuitInstruction "qiskit.circuit.CircuitInstruction") instances in the circuit.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.PhaseOracle.duration">
    The total duration of the circuit, set by a scheduling transpiler pass. Its unit is specified by [`unit`](#qiskit.circuit.library.PhaseOracle.unit "qiskit.circuit.library.PhaseOracle.unit").

    <Admonition title="Deprecated since version 1.3.0" type="danger">
      The property `qiskit.circuit.quantumcircuit.QuantumCircuit.duration` is deprecated as of Qiskit 1.3.0. It will be removed in Qiskit 3.0.0.
    </Admonition>
  </Attribute>

  ### global\_phase

  <Attribute id="qiskit.circuit.library.PhaseOracle.global_phase">
    The global phase of the current circuit scope in radians.

    **Example**

    ```python
    from qiskit import QuantumCircuit

    circuit = QuantumCircuit(2)
    circuit.h(0)
    circuit.cx(0, 1)
    print(circuit.global_phase)
    ```

    ```text
    0.0
    ```

    ```python
    from numpy import pi

    circuit.global_phase = pi/4
    print(circuit.global_phase)
    ```

    ```text
    0.7853981633974483
    ```
  </Attribute>

  ### instances

  <Attribute id="qiskit.circuit.library.PhaseOracle.instances" attributeValue="274" />

  ### layout

  <Attribute id="qiskit.circuit.library.PhaseOracle.layout">
    Return any associated layout information about the circuit.

    This attribute contains an optional [`TranspileLayout`](qiskit.transpiler.TranspileLayout "qiskit.transpiler.TranspileLayout") object. This is typically set on the output from [`transpile()`](compiler#qiskit.compiler.transpile "qiskit.compiler.transpile") or [`PassManager.run()`](qiskit.transpiler.PassManager#run "qiskit.transpiler.PassManager.run") to retain information about the permutations caused on the input circuit by transpilation.

    There are two types of permutations caused by the [`transpile()`](compiler#qiskit.compiler.transpile "qiskit.compiler.transpile") function: an initial layout that permutes the qubits based on the selected physical qubits on the [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target"), and a final layout, which is an output permutation caused by [`SwapGate`](qiskit.circuit.library.SwapGate "qiskit.circuit.library.SwapGate")s inserted during routing.

    **Example**

    ```python
    from qiskit import QuantumCircuit
    from qiskit.providers.fake_provider import GenericBackendV2
    from qiskit.transpiler import generate_preset_pass_manager

    # Create circuit to test transpiler on
    qc = QuantumCircuit(3, 3)
    qc.h(0)
    qc.cx(0, 1)
    qc.swap(1, 2)
    qc.cx(0, 1)

    # Add measurements to the circuit
    qc.measure([0, 1, 2], [0, 1, 2])

    # Specify the QPU to target
    backend = GenericBackendV2(3)

    # Transpile the circuit
    pass_manager = generate_preset_pass_manager(
    optimization_level=1, backend=backend
    )
    transpiled = pass_manager.run(qc)

    # Print the layout after transpilation
    print(transpiled.layout.routing_permutation())
    ```

    ```text
    [0, 1, 2]
    ```
  </Attribute>

  ### metadata

  <Attribute id="qiskit.circuit.library.PhaseOracle.metadata">
    Arbitrary user-defined dictionary of metadata for the circuit.

    Qiskit will not examine the content of this mapping, but it will pass it through the transpiler and reattach it to the output, so you can track your own metadata.

    **Example**

    ```python
    from qiskit import QuantumCircuit

    qc = QuantumCircuit(2, 2, metadata={'experiment_type': 'Bell state experiment'})

    print(qc.metadata)
    ```

    ```text
    {'experiment_type': 'Bell state experiment'}
    ```
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.PhaseOracle.num_ancillas">
    Return the number of ancilla qubits.

    **Example**

    ```python
    from qiskit import QuantumCircuit, QuantumRegister, AncillaRegister

    # Create a 2-qubit quantum circuit
    reg = QuantumRegister(2)
    qc = QuantumCircuit(reg)

    # Create an ancilla register with 1 qubit
    anc = AncillaRegister(1)
    qc.add_register(anc)  # Add the ancilla register to the circuit

    print("Number of ancilla qubits:", qc.num_ancillas)
    ```

    ```text
    Number of ancilla qubits: 1
    ```
  </Attribute>

  ### num\_captured\_stretches

  <Attribute id="qiskit.circuit.library.PhaseOracle.num_captured_stretches">
    The number of stretches in the circuit marked as captured from an enclosing scope.

    This is the length of the `iter_captured_stretches()` iterable. If this is non-zero, [`num_input_vars`](#qiskit.circuit.library.PhaseOracle.num_input_vars "qiskit.circuit.library.PhaseOracle.num_input_vars") must be zero.
  </Attribute>

  ### num\_captured\_vars

  <Attribute id="qiskit.circuit.library.PhaseOracle.num_captured_vars">
    The number of real-time classical variables in the circuit marked as captured from an enclosing scope.

    This is the length of the `iter_captured_vars()` iterable. If this is non-zero, [`num_input_vars`](#qiskit.circuit.library.PhaseOracle.num_input_vars "qiskit.circuit.library.PhaseOracle.num_input_vars") must be zero.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.PhaseOracle.num_clbits">
    Return number of classical bits.

    **Example**

    ```python
    from qiskit import QuantumCircuit

    # Create a new circuit with two qubits and one classical bit
    qc = QuantumCircuit(2, 1)
    print("Number of classical bits:", qc.num_clbits)
    ```

    ```text
    Number of classical bits: 1
    ```
  </Attribute>

  ### num\_declared\_stretches

  <Attribute id="qiskit.circuit.library.PhaseOracle.num_declared_stretches">
    The number of stretches in the circuit that are declared by this circuit scope, excluding captures.

    This is the length of the `iter_declared_stretches()` iterable.
  </Attribute>

  ### num\_declared\_vars

  <Attribute id="qiskit.circuit.library.PhaseOracle.num_declared_vars">
    The number of real-time classical variables in the circuit that are declared by this circuit scope, excluding inputs or captures.

    This is the length of the `iter_declared_vars()` iterable.
  </Attribute>

  ### num\_identifiers

  <Attribute id="qiskit.circuit.library.PhaseOracle.num_identifiers">
    The number of real-time classical variables and stretches in the circuit.

    This is equal to [`num_vars()`](#qiskit.circuit.library.PhaseOracle.num_vars "qiskit.circuit.library.PhaseOracle.num_vars") + [`num_stretches()`](#qiskit.circuit.library.PhaseOracle.num_stretches "qiskit.circuit.library.PhaseOracle.num_stretches").
  </Attribute>

  ### num\_input\_vars

  <Attribute id="qiskit.circuit.library.PhaseOracle.num_input_vars">
    The number of real-time classical variables in the circuit marked as circuit inputs.

    This is the length of the `iter_input_vars()` iterable. If this is non-zero, [`num_captured_vars`](#qiskit.circuit.library.PhaseOracle.num_captured_vars "qiskit.circuit.library.PhaseOracle.num_captured_vars") must be zero.
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.PhaseOracle.num_parameters">
    The number of parameter objects in the circuit.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.PhaseOracle.num_qubits">
    Return number of qubits.
  </Attribute>

  ### num\_stretches

  <Attribute id="qiskit.circuit.library.PhaseOracle.num_stretches">
    The number of stretches in the circuit.

    This is the length of the `iter_stretches()` iterable.
  </Attribute>

  ### num\_vars

  <Attribute id="qiskit.circuit.library.PhaseOracle.num_vars">
    The number of real-time classical variables in the circuit.

    This is the length of the `iter_vars()` iterable.
  </Attribute>

  ### op\_start\_times

  <Attribute id="qiskit.circuit.library.PhaseOracle.op_start_times">
    Return a list of operation start times.

    <Admonition title="Note" type="note">
      This attribute computes the estimate starting time of the operations in the scheduled circuit and only works for simple circuits that have no control flow or other classical feed-forward operations.
    </Admonition>

    This attribute is enabled once one of scheduling analysis passes runs on the quantum circuit.

    **Example**

    ```python
    from qiskit import QuantumCircuit
    from qiskit.providers.fake_provider import GenericBackendV2
    from qiskit.transpiler import generate_preset_pass_manager

    qc = QuantumCircuit(2)
    qc.h(0)
    qc.cx(0, 1)
    qc.measure_all()

    # Print the original circuit
    print("Original circuit:")
    print(qc)

    # Transpile the circuit with a specific basis gates list and print the resulting circuit
    backend = GenericBackendV2(2, basis_gates=['u1', 'u2', 'u3', 'cx'])
    pm = generate_preset_pass_manager(
        optimization_level=1, backend=backend, scheduling_method="alap"
    )
    transpiled_qc = pm.run(qc)
    print("Transpiled circuit with basis gates ['u1', 'u2', 'u3', 'cx']:")
    print(transpiled_qc)

    # Print the start times of each instruction in the transpiled circuit
    print("Start times of instructions in the transpiled circuit:")
    for instruction, start_time in zip(transpiled_qc.data, transpiled_qc.op_start_times):
        print(f"{instruction.operation.name}: {start_time}")
    ```

    ```text
    Original circuit:
            ┌───┐      ░ ┌─┐
    q_0: ┤ H ├──■───░─┤M├───
            └───┘┌─┴─┐ ░ └╥┘┌─┐
    q_1: ─────┤ X ├─░──╫─┤M├
                └───┘ ░  ║ └╥┘
    meas: 2/══════════════╩══╩═
                        0  1

    Transpiled circuit with basis gates ['u1', 'u2', 'u3', 'cx']:
                ┌─────────┐          ░ ┌─────────────────┐┌─┐
    q_0 -> 0 ───┤ U2(0,π) ├──────■───░─┤ Delay(1255[dt]) ├┤M├
            ┌──┴─────────┴───┐┌─┴─┐ ░ └───────┬─┬───────┘└╥┘
    q_1 -> 1 ┤ Delay(196[dt]) ├┤ X ├─░─────────┤M├─────────╫─
            └────────────────┘└───┘ ░         └╥┘         ║
    meas: 2/═══════════════════════════════════╩══════════╩═
                                                1          0

    Start times of instructions in the transpiled circuit:
    u2: 0
    delay: 0
    cx: 196
    barrier: 2098
    delay: 2098
    measure: 3353
    measure: 2098
    ```

    **Returns**

    List of integers representing instruction estimated start times. The index corresponds to the index of instruction in `QuantumCircuit.data`.

    **Raises**

    [**AttributeError**](https://docs.python.org/3/library/exceptions.html#AttributeError "(in Python v3.13)") – When circuit is not scheduled.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.PhaseOracle.parameters">
    The parameters defined in the circuit.

    This attribute returns the [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects in the circuit sorted alphabetically. Note that parameters instantiated with a [`ParameterVector`](qiskit.circuit.ParameterVector "qiskit.circuit.ParameterVector") are still sorted numerically.

    **Examples**

    The snippet below shows that insertion order of parameters does not matter.

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter
    >>> a, b, elephant = Parameter("a"), Parameter("b"), Parameter("elephant")
    >>> circuit = QuantumCircuit(1)
    >>> circuit.rx(b, 0)
    >>> circuit.rz(elephant, 0)
    >>> circuit.ry(a, 0)
    >>> circuit.parameters  # sorted alphabetically!
    ParameterView([Parameter(a), Parameter(b), Parameter(elephant)])
    ```

    Bear in mind that alphabetical sorting might be unintuitive when it comes to numbers. The literal “10” comes before “2” in strict alphabetical sorting.

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter
    >>> angles = [Parameter("angle_1"), Parameter("angle_2"), Parameter("angle_10")]
    >>> circuit = QuantumCircuit(1)
    >>> circuit.u(*angles, 0)
    >>> circuit.draw()
       ┌─────────────────────────────┐
    q: ┤ U(angle_1,angle_2,angle_10) ├
       └─────────────────────────────┘
    >>> circuit.parameters
    ParameterView([Parameter(angle_1), Parameter(angle_10), Parameter(angle_2)])
    ```

    To respect numerical sorting, a [`ParameterVector`](qiskit.circuit.ParameterVector "qiskit.circuit.ParameterVector") can be used.

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter, ParameterVector
    >>> x = ParameterVector("x", 12)
    >>> circuit = QuantumCircuit(1)
    >>> for x_i in x:
    ...     circuit.rx(x_i, 0)
    >>> circuit.parameters
    ParameterView([
        ParameterVectorElement(x[0]), ParameterVectorElement(x[1]),
        ParameterVectorElement(x[2]), ParameterVectorElement(x[3]),
        ..., ParameterVectorElement(x[11])
    ])
    ```

    **Returns**

    The sorted [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects in the circuit.
  </Attribute>

  ### prefix

  <Attribute id="qiskit.circuit.library.PhaseOracle.prefix" attributeValue="'circuit'" />

  ### qregs

  <Attribute id="qiskit.circuit.library.PhaseOracle.qregs">
    A list of `Qubit`s in the order that they were added. You should not mutate this.
  </Attribute>

  ### qubits

  <Attribute id="qiskit.circuit.library.PhaseOracle.qubits">
    A list of `Qubit`s in the order that they were added. You should not mutate this.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.PhaseOracle.unit">
    The unit that [`duration`](#qiskit.circuit.library.PhaseOracle.duration "qiskit.circuit.library.PhaseOracle.duration") is specified in.

    <Admonition title="Deprecated since version 1.3.0" type="danger">
      The property `qiskit.circuit.quantumcircuit.QuantumCircuit.unit` is deprecated as of Qiskit 1.3.0. It will be removed in Qiskit 3.0.0.
    </Admonition>
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.PhaseOracle.name" attributeTypeHint="str">
    A human-readable name for the circuit.

    **Example**

    ```python
    from qiskit import QuantumCircuit

    qc = QuantumCircuit(2, 2, name="my_circuit")
    print(qc.name)
    ```

    ```text
    my_circuit
    ```
  </Attribute>

  ## Methods

  ### evaluate\_bitstring

  <Function id="qiskit.circuit.library.PhaseOracle.evaluate_bitstring" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/library/phase_oracle.py#L70-L81" signature="evaluate_bitstring(bitstring)">
    Evaluate the oracle on a bitstring. This evaluation is done classically without any quantum circuit.

    **Parameters**

    **bitstring** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – The bitstring for which to evaluate. The input bitstring is expected to be in little-endian order.

    **Returns**

    True if the bitstring is a good state, False otherwise.

    **Return type**

    [bool](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")
  </Function>

  ### from\_dimacs\_file

  <Function id="qiskit.circuit.library.PhaseOracle.from_dimacs_file" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/library/phase_oracle.py#L83-L129" signature="from_dimacs_file(filename)" modifiers="classmethod">
    Create a PhaseOracle from the string in the DIMACS format.

    It is possible to build a PhaseOracle from a file in [DIMACS CNF format](https://web.archive.org/web/20190325181937/https://www.satcompetition.org/2009/format-benchmarks2009.html), which is the standard format for specifying SATisfiability (SAT) problem instances in [Conjunctive Normal Form (CNF)](https://en.wikipedia.org/wiki/Conjunctive_normal_form), which is a conjunction of one or more clauses, where a clause is a disjunction of one or more literals.

    The following is an example of a CNF expressed in the DIMACS format:

    ```text
    c DIMACS CNF file with 3 satisfying assignments: 1 -2 3, -1 -2 -3, 1 2 -3.
    p cnf 3 5
    -1 -2 -3 0
    1 -2 3 0
    1 2 -3 0
    1 -2 -3 0
    -1 2 3 0
    ```

    The first line, following the c character, is a comment. The second line specifies that the CNF is over three boolean variables — let us call them $x_1, x_2, x_3$, and contains five clauses. The five clauses, listed afterwards, are implicitly joined by the logical AND operator, $\land$, while the variables in each clause, represented by their indices, are implicitly disjoined by the logical OR operator, $lor$. The $-$ symbol preceding a boolean variable index corresponds to the logical NOT operator, $lnot$. Character 0 (zero) marks the end of each clause. Essentially, the code above corresponds to the following CNF:

    $(\lnot x_1 \lor \lnot x_2 \lor \lnot x_3) \land (x_1 \lor \lnot x_2 \lor x_3) \land (x_1 \lor x_2 \lor \lnot x_3) \land (x_1 \lor \lnot x_2 \lor \lnot x_3) \land (\lnot x_1 \lor x_2 \lor x_3)$.

    **Parameters**

    **filename** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – A file in DIMACS format.

    **Returns**

    A quantum circuit with a phase oracle.

    **Return type**

    [PhaseOracle](#qiskit.circuit.library.PhaseOracle "qiskit.circuit.library.PhaseOracle")
  </Function>
</Class>

